# website

./: .gitignore  Makefile  README.md  app.py  pyproject.toml  requirements.txt
lib/: globals.py  recipe.py  roasting_ref.py
models/: recipe.py  user.py
services/: auth.py  index.py  recipes.py  sql.py  sql_update.py
static/css/: custom.css
templates/: about.html  base.html  header.html  home.html  login.html  resume.html
templates/portfolio/: about.html  home.html  resume.html
templates/recipe_book/: recipe.html  recipe_header.html  recipe_index.html
