[tool.poetry]
name = "website"
version = "0.1.0"
description = ""
authors = ["Megan Nissel <megnissel@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.8.0"
Flask = "3.0.0"
flask-login = "~0.6.3"
Gunicorn = "21.2.0"
sqlalchemy = "~2.0.0"

[tool.poetry.dev-dependencies]
jupyter = "*"
poetry-dotenv-plugin="~0.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
